# AC_Coach

./: .gitignore  README.md  database.py  llm.py  llm_integration.py  llm库调用文档.md  main.py  mainwindow.py  pyproject.toml  数据库与 LLM 集成模块使用说明.md
app/: cpp_runner.py  editor_manager.py  problem_controller.py
ui/: form.ui  ui_form.py
